---
source: crates/mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: return_type.md - Function return type - Generator functions - Synchronous
mdtest path: crates/ty_python_semantic/resources/mdtest/function/return_type.md
---

# Python source files

## mdtest_snippet.py

```
 1 | import types
 2 | import typing
 3 | 
 4 | def f() -> types.GeneratorType[int, None, None]:
 5 |     yield 42
 6 | 
 7 | def g() -> typing.Generator[int]:
 8 |     yield 42
 9 | 
10 | def h() -> typing.Iterator[int]:
11 |     yield 42
12 | 
13 | def i() -> typing.Iterable[int]:
14 |     yield 42
15 | 
16 | def i2() -> typing.Generator[int]:
17 |     yield from i()
18 | 
19 | def j() -> str:  # error: [invalid-return-type]
20 |     yield 42
21 | 
22 | def invalid_return_type() -> typing.Generator[None, None, None]:
23 |     yield
24 |     return ""  # error: [invalid-return-type]
25 | def wrong_return() -> typing.Generator[int, int, int]:
26 |     yield 1
27 |     return ""  # error: [invalid-return-type]
28 | def bare_return_ok() -> typing.Generator[int, int, None]:
29 |     yield 1
30 | 
31 | def missing_return() -> typing.Generator[int, int, int]:  # error: [invalid-return-type]
32 |     yield 1
33 | def iterator_must_not_return() -> typing.Iterator[int]:
34 |     yield 2
35 |     # error: [invalid-return-type]
36 |     return "foo"
```

# Diagnostics

```
error[invalid-return-type]: Return type does not match returned value
  --> src/mdtest_snippet.py:19:12
   |
19 | def j() -> str:  # error: [invalid-return-type]
   |            ^^^ expected `str`, found `types.GeneratorType`
   |
info: Function is inferred as returning `types.GeneratorType` because it is a generator function
info: See https://docs.python.org/3/glossary.html#term-generator for more details

```

```
error[invalid-return-type]: Return type does not match returned value
  --> src/mdtest_snippet.py:24:12
   |
22 | def invalid_return_type() -> typing.Generator[None, None, None]:
   |                              ---------------------------------- Expected `None` because of return type
23 |     yield
24 |     return ""  # error: [invalid-return-type]
   |            ^^ expected `None`, found `Literal[""]`

```

```
error[invalid-return-type]: Return type does not match returned value
  --> src/mdtest_snippet.py:27:12
   |
25 | def wrong_return() -> typing.Generator[int, int, int]:
   |                       ------------------------------- Expected `int` because of return type
26 |     yield 1
27 |     return ""  # error: [invalid-return-type]
   |            ^^ expected `int`, found `Literal[""]`

```

```
error[invalid-return-type]: Function always implicitly returns `None`, which is not assignable to return type `int`
  --> src/mdtest_snippet.py:31:25
   |
31 | def missing_return() -> typing.Generator[int, int, int]:  # error: [invalid-return-type]
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
info: Consider changing the return annotation to `-> None` or adding a `return` statement

```

```
error[invalid-return-type]: Return type does not match returned value
  --> src/mdtest_snippet.py:36:12
   |
33 | def iterator_must_not_return() -> typing.Iterator[int]:
   |                                   -------------------- Expected `None` because of return type
34 |     yield 2
35 |     # error: [invalid-return-type]
36 |     return "foo"
   |            ^^^^^ expected `None`, found `Literal["foo"]`

```
